--- a/admin/directives/toggle/adToggleButton.html
+++ b/admin/directives/toggle/adToggleButton.html
@@ -1,4 +1,4 @@
-<div class="entry {{divClass}}">
+<div class="entry {{divClass}}" ng-hide="isHide">
 	<label ng-hide="label.length ==0" for="">{{label}}</label>
 	<div class="switch-button single {{buttonClass}}" ng-class="{'on': isChecked}">
 		<input type="checkbox"  ng-checked="isChecked" ng-model="isChecked" ng-disabled="isDisabled">
