--- a/zest_station/partials_v2/zsHomePage.html
+++ b/zest_station/partials_v2/zsHomePage.html
@@ -27,7 +27,7 @@
                     </li>
                      <li ng-if="zestStationData.home_screen.booking_pop_up.enable_pop_up">
                         <button type="button" class="button option" touch-press='openExternalWebPage()'>
-                            <img style="height: 95%;margin-top: 5px;" src="{{icons.url.booknow}}" />
+                                <div ng-include="icons.url.booknow"></div>
                         </button>
                         {{'BOOK_NOW' |translate}}
                     </li>
