--- a/zest_station/partials_v2/checkin/zsCollectNationality.html
+++ b/zest_station/partials_v2/checkin/zsCollectNationality.html
@@ -2,22 +2,28 @@
     <div id="content" class="input-field-contents">
         <h1 translate>NATIONALITY</h1>
         <!-- <h3>Subheading text here</h3> -->
-        <form method="post" class="form">
+        <form ng-class="{'focused-pushed-up':zestStationData.theme == 'yotel'}" method="post" class="form">
+
             <div class="entry select select-with-button" ng-focus="showOnScreenKeyboard('country-selector')" click-touch="showOnScreenKeyboard('country-selector')">
-                <input type='text' id='country-selector'>
-                <select class="turn-to-ac select" name="Country" autofocus="autofocus" autocorrect="off" autocomplete="off"
+                <!--input type='text' id='country-selector'-->
+
+
+                <select id='country-selector' class="turn-to-ac select" name="Country" autofocus="autofocus" autocorrect="off" autocomplete="off"
                 ng-options="country.id as country.value for country in countryList" ng-model="selectedCountry.id" 
                 ng-if="!zestStationData.kiosk_enforce_country_sort">
                     <option style="display:none" value="" class=""></option>
                 </select>
+
                 <!-- sorted -->
-                <select class="turn-to-ac select" name="Country" autofocus="autofocus" autocorrect="off" autocomplete="off"
+
+                <select id='country-selector' class="turn-to-ac select" name="Country" autofocus="autofocus" autocorrect="off" autocomplete="off"
                  ng-model="selectedCountry.id" ng-if="zestStationData.kiosk_enforce_country_sort">
                     <option value="">-- Select country --</option>
                     <option ng-repeat="country in sortedCountries" value="{{country.id}}" ng-selected="country.id==countrySelected"> {{country.name}} </option>
                     <option value="" ng-show="sortedCountries.length > 0" disabled> ------------------ </option>
                     <option ng-repeat="country in unSortedCountries" value="{{country.id}}" ng-selected="country.id==countrySelected"> {{country.name}} </option>
                 </select>
+
             </div>
             <div class="entry action">
                 <button type="button" class="button" ng-click="saveNationality()">Next</button>
