CICO-33040 fixes virtual keyboard input with autocomplete plugin

--- a/zest_station/partials_v2/checkin/zsCollectNationality.html
+++ b/zest_station/partials_v2/checkin/zsCollectNationality.html
@@ -4,12 +4,13 @@
         <!-- <h3>Subheading text here</h3> -->
         <form ng-class="{'focused-pushed-up':zestStationData.theme == 'yotel'}" method="post" class="form">
 
-            <div class="entry select select-with-button" ng-focus="showOnScreenKeyboard('country-selector')" click-touch="showOnScreenKeyboard('country-selector')">
+            <div class="entry select select-with-button" >
                 <!--input type='text' id='country-selector'-->
 
 
-                <select id='country-selector' class="turn-to-ac select" name="Country" autofocus="autofocus" autocorrect="off" autocomplete="off"
-                ng-options="country.id as country.value for country in countryList" ng-model="selectedCountry.id" 
+                <select  id='country-selector' class="turn-to-ac select" name="Country" autofocus="autofocus" autocorrect="off" autocomplete="off"
+                ng-options="country.id as country.value for country in countryList" 
+                 ng-model="selectedCountry.id" 
                 ng-if="!zestStationData.kiosk_enforce_country_sort">
                     <option style="display:none" value="" class=""></option>
                 </select>
@@ -18,8 +19,10 @@
 
                 <select id='country-selector' class="turn-to-ac select" name="Country" autofocus="autofocus" autocorrect="off" autocomplete="off"
                  ng-model="selectedCountry.id" ng-if="zestStationData.kiosk_enforce_country_sort">
-                    <option value="">-- Select country --</option>
+                    <option  value="">-- Select country --</option>
                     <option ng-repeat="country in sortedCountries" value="{{country.id}}" ng-selected="country.id==countrySelected"> {{country.name}} </option>
+
+
                     <option value="" ng-show="sortedCountries.length > 0" disabled> ------------------ </option>
                     <option ng-repeat="country in unSortedCountries" value="{{country.id}}" ng-selected="country.id==countrySelected"> {{country.name}} </option>
                 </select>
