--- a/zest_station/partials_v2/checkin/zsCollectNationality.html
+++ b/zest_station/partials_v2/checkin/zsCollectNationality.html
@@ -18,7 +18,7 @@
 
                 <select id='country-selector' class="turn-to-ac select" name="Country" autofocus="autofocus" autocorrect="off" autocomplete="off"
                  ng-model="selectedCountry.id" ng-if="zestStationData.kiosk_enforce_country_sort">
-                    <option  value="">-- Select country --</option>
+                    <option value="">-- Select Country --</option><!-- TODO need to have this translatable -->
                     <option ng-repeat="country in sortedCountries" value="{{country.id}}" ng-selected="country.id==countrySelected"> {{country.name}} </option>
 
 
@@ -28,7 +28,7 @@
 
             </div>
             <div class="entry action">
-                <button type="button" class="button" ng-click="saveNationality()">Next</button>
+                <button type="button" class="button" ng-click="saveNationality()">{{'NEXT_BTN' |translate}}</button>
             </div>
         </form>
     </div>
