--- a/admin/directives/textArea/adTextArea.html
+++ b/admin/directives/textArea/adTextArea.html
@@ -1,4 +1,4 @@
-<div class="entry {{divClass}}">
+<div class="entry {{divClass}}" ng-hide="ngHide">
 	<label > {{label}} <strong ng-show="required">*</strong></label>
 	<textarea rows="{{rows}}" ng-model="value" placeholder="{{placeholder}}" name="{{name}}" id="{{id}}" class="{{textAreaClass}}" maxlength="{{maxlength>0?maxlength:''}}" ng-disabled="disabled">
 		{{value}}
