CICO-34398 fixing button alignment issue in zest station admin screen

--- a/zest_station/partials_v2/zsAdminSettings.html
+++ b/zest_station/partials_v2/zsAdminSettings.html
@@ -103,8 +103,8 @@
         </div>
         <div id="actions" class="align-center">
             <button type="button" class="button" touch-press='cancelAdminSettings()'>Cancel</button>
-            <button type="button" class="button" touch-press='saveSettings()'>Save</button>
-            <button type="button" class="button" touch-press='logOutApplication()'>{{'LOGOUT' |translate}}</button>
+            <button type="button" class="button button-left-margin" touch-press='saveSettings()'>Save</button>
+            <button type="button" class="button button-left-margin" touch-press='logOutApplication()'>{{'LOGOUT' |translate}}</button>
         </div>
     </div>
     <div>
