--- a/zest_station/partials_v2/checkin/zsCheckinRoomError.html
+++ b/zest_station/partials_v2/checkin/zsCheckinRoomError.html
@@ -1,12 +1,12 @@
 <section id="main" class="centered" role="main" click-touch='resetTime()'>
-    <div id="content" ng-show="unavailable != 'true'">
+    <div id="content" ng-show="early_checkin_unavailable != 'true'">
         <h1>{{'TALK_TO_STAFF' |translate}}</h1>
         <h2>{{'ROOM_NOT_AVAIL_MSG' |translate}}</h2>
         <!-- General error -->
         <button type="button" class="button" touch-press="clickedOnCloseButton()">{{'DONE_BTN' |translate}}</button>
     </div>
     <!-- Early Checkin Unavailable, too early to check-in -->
-    <div id="message" ng-show="unavailable == 'true'">
+    <div id="message" ng-show="early_checkin_unavailable == 'true'">
         <h1>{{'CHECKIN_TOO_EARLY' |translate}}</h1>
         <h2 class="nocaps">
         {{'CHECKIN_TOO_EARLY_SUB_HEADER' |translate}}</h2>
@@ -15,4 +15,4 @@
     </div>
     
     <span ng-include="'/assets/partials_v2/zsTabletFooter.html'" ></span>
-</section>
+</section>g
