--- a/zest_station/partials_v2/checkin/zsCollectNationality.html
+++ b/zest_station/partials_v2/checkin/zsCollectNationality.html
@@ -2,12 +2,19 @@
     <div id="content" class="input-field-contents">
         <h1 translate>NATIONALITY</h1>
         <!-- <h3>Subheading text here</h3> -->
-        <form method="post" class="form" focus-on='true'>
+        <form method="post" class="form">
 
             <div class="entry select select-with-button input" ng-class="{'autocomplete-border':showingAutoCompleteArea == true}">
                 <!--input type='text' id='country-selector'-->
 
-                <select id='country-selector' class="turn-to-ac select" name="Country" autocorrect="off" autocomplete="off"
+                <select
+                focus-on='input'
+                focus-on-trigger='showingAutoComplete'
+                id='country-selector' 
+                class="turn-to-ac select" 
+                name="Country" 
+                autocorrect="off" 
+                autocomplete="off"
                 ng-options="country.id as country.value for country in countryList" 
                 ng-model="selectedCountry.id" 
                 ng-keydown='showingAutoComplete()'
@@ -17,17 +24,24 @@
 
                 <!-- sorted -->
 
-                <select  id='country-selector' class="turn-to-ac select" name="Country" autocorrect="off" autocomplete="off"
-                 ng-model="selectedCountry.id" ng-if="zestStationData.kiosk_enforce_country_sort">
+                <select 
+                focus-on='input'
+                focus-on-trigger='showingAutoComplete'
+                id='country-selector' 
+                class="turn-to-ac select" 
+                name="Country" 
+                autocorrect="off" 
+                autocomplete="off"
+                ng-model="selectedCountry.id" 
+                ng-if="zestStationData.kiosk_enforce_country_sort">
                     <option value="">{{SELECT_COUNTRY}}</option><!-- TODO need to have this translatable -->
                     <option ng-repeat="country in sortedCountries" value="{{country.id}}" ng-selected="country.id==countrySelected"> {{country.name}} </option>
                     <option value="" ng-show="sortedCountries.length > 0" disabled> ------------------ </option>
                     <option ng-repeat="country in unSortedCountries" value="{{country.id}}" ng-selected="country.id==countrySelected"> {{country.name}} </option>
                 </select>
-
             </div>
 
-            <div clear-field='input' ng-if="zestStationData.theme === 'yotel'" ng-include="icons.url.clear_icon" click-touch="clearNationality()"></div>
+            <div ng-if="zestStationData.theme === 'yotel'" ng-include="icons.url.clear_icon" click-touch="clearNationality()"></div>
 
             <div class="action">
                 <button type="button" class="button left-aligned-next" ng-click="saveNationality()">{{'NEXT_BTN' |translate}}</button>
