--- a/zest_station/partials_v2/zsRoot.html
+++ b/zest_station/partials_v2/zsRoot.html
@@ -18,6 +18,21 @@
         <button type="button" class="button" click-touch='resetTime();'>{{'IDLE_TIMEOUT_YES'|translate}}</button>
     </div>
 </div>
+<div class="popup" ng-class="{'open':showLanguagePopup}">
+    <div class="popup-content">
+        <i class="close-popup" data-action="popup" touch-press="closeLangPopUp()"></i>
+        <h2 class="nocaps">Select Language</h2>
+        <div id="languages">
+            <button ng-repeat="language in langInfo" ng-hide="!isSupported(language.info.name)" touch-press="selectLanguage(language)" type="button" class="button with-icon" ng-class=" {'active':selectedLanguage==='{{language.language}}' }">
+                <i class="icons icon-flag {{language.info.flag}}"></i> {{language.language}}
+            </button>
+            <!--button ng-hide="!isSupported('nl')" touch-press="selectLanguage('nl')" type="button" class="button with-icon" ng-class=" {'active':selectedLanguage==='nl' }">
+                <i class="icons icon-flag flag-nl"></i>
+                Nederlands
+            </button-->
+        </div>
+    </div>
+</div>
 <div id="popup-overlay" ng-class="{'open':zestStationData.timeOut}"></div>
 <!-- Remove class "open" to hide popup overlay -->
 <div ng-controller="zsThemeActionsCtrl">
