--- a/zest_station/partials_v2/zsAdminSettings.html
+++ b/zest_station/partials_v2/zsAdminSettings.html
@@ -38,7 +38,7 @@
     <span ng-include="'/assets/partials_v2/zsTabletFooter.html'" click-touch='resetTime()'></span>
 </section>
 <!-- Content -->
-<section id="main" class="admin-screen" role="main" ng-show="mode === 'admin-screen-active'">
+<section id="main" class="admin-screen" role="main" ng-show="mode === 'admin-screen-active'" ng-class="{'no-main-bg':zestStationData.theme === 'zoku'}">
     <div id="content" class="input-field-contents">
         <div id="textual" class="tabled-options" style="max-height: 559px;" ng-iscroll="admin-screen" ng-iscroll-delay="100" ng-init="setScroll()">
             <div class="wrapper">
