--- a/zest_station/partials_v2/checkout/zsCheckOutOptions.html
+++ b/zest_station/partials_v2/checkout/zsCheckOutOptions.html
@@ -11,7 +11,7 @@
                     {{'USE_KEY_CARD' | translate}}
                 </li>
                 <li class="break">
-                    <span>Or</span>
+                    <span>{{OR_TEXT | translate}}</span>
                 </li>
                 <li>
                     <button type="button" class="button option" touch-press="searchByName()">
