--- a/admin/directives/selectBox/adDropdownboxName.html
+++ b/admin/directives/selectBox/adDropdownboxName.html
@@ -1,7 +1,7 @@
 
 <div class='entry {{divClass}}'  ng-style="{{divStyle}}">
   <label class='{{labelClass}}' for='{{id}}' ng-hide="label.length==0">
-        {{labelClass}}{{label}}<strong ng-show = "required=='no'"> * </strong>
+        {{labelClass}}{{label}}<strong ng-show = "required=='yes'"> * </strong>
   </label>
   
   <div class='select'>
