CICO-34750 fixes some tags missing quotes

--- a/zest_station/partials_v2/checkin/zscheckInReservationSearch.html
+++ b/zest_station/partials_v2/checkin/zscheckInReservationSearch.html
@@ -154,7 +154,7 @@
                     <span>{{reservationParams.email||reservationParams.no_of_nights||reservationParams.date||reservationParams.alt_confirmation_number}}</span>
                 </li>
                 <li class="break">
-                    <span>{{OR_TEXT | translate}}</span>
+                    <span>{{'OR_TEXT' | translate}}</span>
                 </li>
                 <li>
                     <button type="button" class="button option" touch-press='talkToStaff(); resetTime();'>
