--- a/zest_station/partials_v2/checkin/zsCheckinEmailCollection.html
+++ b/zest_station/partials_v2/checkin/zsCheckinEmailCollection.html
@@ -25,13 +25,13 @@
                         <!--div ng-include="'/assets/zest_station/css/icons/keyboard.svg'"></div-->
                         <div ng-include="icons.url.keyboard"></div>
                     </button>
-                    {{RE_TYPE | translate}}
+                    {{'RE_TYPE' | translate}}
                     <span>"{{email}}"</span>
                 </li>
             </ul>
         </nav>
         <div id="actions" class="align-right">
-            <button type="button" class="button transparent" click-touch="skipEmail()">{{SKIP_THIS | translate}}</button>
+            <button type="button" class="button transparent" click-touch="skipEmail()">{{'SKIP_THIS' | translate}}</button>
         </div>
     </div>
 </section>
