--- a/zest_station/partials_v2/checkin/zsCheckinRegCardDeliveryOptions.html
+++ b/zest_station/partials_v2/checkin/zsCheckinRegCardDeliveryOptions.html
@@ -79,7 +79,7 @@
                         <!--div ng-include="'/assets/zest_station/css/icons/keyboard.svg'"></div-->
                         <div ng-include="icons.url.keyboard"></div>
                     </button>
-                    {{RE_TYPE | translate}}
+                    {{'RE_TYPE' | translate}}
                     <span>"{{email}}"</span>
                 </li>
             </ul>
