CICO-35053 use SKIP_BTN as common locale for Skip button (email) and future print screens

--- a/zest_station/partials_v2/checkin/zsCheckinEmailCollection.html
+++ b/zest_station/partials_v2/checkin/zsCheckinEmailCollection.html
@@ -31,7 +31,7 @@
             </ul>
         </nav>
         <div id="actions" class="align-right">
-            <button type="button" class="button transparent" click-touch="skipEmail()">{{'SKIP_THIS' | translate}}</button>
+            <button type="button" class="button transparent" click-touch="skipEmail()">{{'SKIP_BTN' | translate}}</button>
         </div>
     </div>
 </section>
