CICO-34008 updates theme loading moves zoku and yotel to css theme files, need to move other themes to css after updating/configuring each theme css

--- a/zest_station/partials_v2/zsTabletHeader.html
+++ b/zest_station/partials_v2/zsTabletHeader.html
@@ -4,9 +4,7 @@
         <span ng-hide="useNavIcons" translate>NAV_BACK</span>
         <div ng-show="useNavIcons" ng-include="icons.url.back"></div>
     </button>
-    <div id="logo">
-        <ng-include src="getThemeUrl()"></ng-include>
-    </div>
+    <div id="logo" class='logo-svg'></div>
     <!-- Close button, if applicable -->
     
     <button type="button" id="close-button" class="button blank" click-touch='clickedOnCloseButton()' ng-hide="hideCloseButton">
