--- a/admin/directives/filterTable/adFilterTableHeader.html
+++ b/admin/directives/filterTable/adFilterTableHeader.html
@@ -1,5 +1,5 @@
 
-<label class="checkbox inline" for="rooming-list-all" ng-click="toggleSelectAllRooms()">
-    <span class="icon-form icon-checkbox" ng-class="{'checked': roomSelection.areAllRoomsSelected, 'semi-checked': roomSelection.areSomeRoomsSelected}"></span>
+<label class="checkbox inline" for="rooming-list-all" ng-click="toggleSelectAllItems()">
+    <span class="icon-form icon-checkbox" ng-class="{'checked': selectionConfig.areAllItemsSelected, 'semi-checked': selectionConfig.areSomeItemsSelected}"></span>
     <!-- Add class "checked" if checked or all items in rooming list are selected. Add class "semi-checked" (and make sure it has no class "checked") when not all items in the rooming list are selected -->
 </label>
