CICO-34967 minor text change

--- a/admin/directives/filterTable/adFilterTable.html
+++ b/admin/directives/filterTable/adFilterTable.html
@@ -1,7 +1,7 @@
 <div class="group-content with-pagination holder">
     <div class="group-filters">
         <ul class="filters">
-            <li ng-click="toggleAvailableItems()" ng-class="{'active' : selectionConfig.activeTab === 'UNSELECTED'}">Show All</li>
+            <li ng-click="toggleAvailableItems()" ng-class="{'active' : selectionConfig.activeTab === 'UNSELECTED'}">Unselected</li>
             <li ng-click="toggleAvailableItems()" ng-class="{'active' : selectionConfig.activeTab === 'SELECTED'}">Selected</li>
         </ul>
         <div class="entry search">
