CICO-34967 text change

--- a/admin/directives/filterTable/adFilterTable.html
+++ b/admin/directives/filterTable/adFilterTable.html
@@ -7,8 +7,8 @@
     </div>
     <div class="group-filters">
         <ul class="filters">
-            <li ng-click="toggleAvailableItems()" ng-class="{'active' : selectionConfig.activeTab === 'UNSELECTED'}">Available</li>
-            <li ng-click="toggleAvailableItems()" ng-class="{'active' : selectionConfig.activeTab === 'SELECTED'}">Selected</li>
+            <li ng-click="toggleAvailableItems()" ng-class="{'active' : selectionConfig.activeTab === 'UNSELECTED'}">INCLUDED</li>
+            <li ng-click="toggleAvailableItems()" ng-class="{'active' : selectionConfig.activeTab === 'SELECTED'}">EXCLUDED</li>
         </ul>
         <div class="entry search">
             <button type="submit" name="submit" class="icons icon-search">Search</button>
