--- a/zest_station/partials_v2/zsAdminSettings.html
+++ b/zest_station/partials_v2/zsAdminSettings.html
@@ -103,7 +103,7 @@
         </div>
         <div id="actions" class="align-center">
             <button type="button" class="button" touch-press='cancelAdminSettings()'>{{'ADMIN_CANCEL' |translate}}</button>
-            <button type="button" class="button button-left-margin" touch-press='saveSettings()'>{{'ADMIN_SAVE' |translate}}</button>
+            <button type="button" ng-class="{'disabled-button':!workstation.selected}" class="button button-left-margin" touch-press='saveSettings()'>{{'ADMIN_SAVE' |translate}}</button>
             <button type="button" class="button button-left-margin" touch-press='logOutApplication()'>{{'LOGOUT' |translate}}</button>
         </div>
     </div>
