--- a/admin/directives/selectBox/adDropdownboxName.html
+++ b/admin/directives/selectBox/adDropdownboxName.html
@@ -10,6 +10,7 @@
                 class="{{selboxClass}}"
                 ng-style="{{sel-style}}"
                 ng-model="ngModel"
+                ng-change="onChange();"
                 ng-disabled="isDisabled">
 
             <option value=""
