--- a/zest_station/partials_v2/zsAdminSettings.html
+++ b/zest_station/partials_v2/zsAdminSettings.html
@@ -39,50 +39,53 @@
 </section>
 <!-- Content -->
 <section id="main" class="admin-screen" role="main" ng-show="mode === 'admin-screen-active'" ng-class="{'no-main-bg':zestStationData.theme === 'zoku'}">
+    <label class='admin-screen-title'>Zest Station Local Admin Settings</label>
     <div id="content" class="input-field-contents">
         <div id="textual" class="tabled-options" style="max-height: 559px;" ng-iscroll="admin-screen" ng-iscroll-delay="100" ng-init="setScroll()">
             <div class="wrapper">
                 <div class="entry with-label">
-                    <label>{{'ADMIN_WORKSTATION' |translate}}</label>
+                    <label>Workstation</label>
                     <div class="entry select">
                         <select ng-options="workstation.id as workstation.name for workstation in zestStationData.workstations" ng-model="workstation.selected" ng-change="worksStationChanged()">
-                            <option style="display:none" value="" class="">{{'ADMIN_SELECT' |translate}}</option>
+                            <option style="display:none" value="" class="">Select</option>
                         </select>
                     </div>
                 </div>
                 <div class="entry with-label">
-                    <label>{{'ADMIN_STATUS' |translate}}</label>
+                    <label>Workstation Status</label>
                     <div class="entry select">
                         <select id="order-status" ng-model="zestStationData.workstationStatus">
-                            <option value="">{{'ADMIN_SELECT' |translate}}</option>
-                            <option value="in-order">{{'ADMIN_IN_ORDER' |translate}}</option>
-                            <option selected="selected" value="out-of-order">{{'ADMIN_OUTOF_ORDER' |translate}}</option>
+                            <option value="">Select</option>
+                            <option value="in-order">In Order</option>
+                            <option selected="selected" value="out-of-order">Out of Order</option>
                         </select>
                     </div>
                 </div>
                 <div id="order-reason" class="entry with-label" ng-show="zestStationData.workstationStatus === 'out-of-order'">
-                    <label>{{'ADMIN_OUT_OF_ORDER_REASON' |translate}}</label>
+                    <label>Out of Order Reason</label>
                     <input readonly="" class="read-only" ng-model="zestStationData.workstationOooReason">
                 </div>
                 <div class="entry with-label">
-                    <label class='admin-item-label'>{{'ADMIN_TIMER_ENABLED_BTN' |translate}}</label>
+                    <label class='admin-item-label'>Station Idle Timer</label>
                     <div class="entry select">
                         <select ng-model="zestStationData.idle_timer.enabled">
-                            <option value="true">{{'ADMIN_ENABLED' |translate}}</option>
-                            <option value="false">{{'ADMIN_DISABLED' |translate}}</option>
+                            <option value="true">Enabled</option>
+                            <option value="false">Disabled</option>
                         </select>
                     </div>
                 </div>
                 <div class="entry with-label">
-                    <label translate>ADMIN_TIME_OUT</label>
+                    <label>Idle Screen Prompt After (seconds)</label>
+                    <label class='admin-label-description'>Prompt user to see if they are still using the Station after {{zestStationData.idle_timer.prompt}} seconds of no activity</label>
+                    <input touch-press id="prompt_text" ng-focus="showOnScreenKeyboard('prompt_text')" click-touch="showOnScreenKeyboard('prompt_text')" type="number" min='1' max='{{zestStationData.idle_timer.max}}' ng-model='zestStationData.idle_timer.prompt' />
+                </div>
+                <div class="entry with-label">
+                    <label>Idle Time-Out (seconds)</label>
+                    <label class='admin-label-description'>Return to Home Screen after {{zestStationData.idle_timer.max}} seconds of no activity</label>
                     <input touch-press id="timeout_text" ng-focus="showOnScreenKeyboard('timeout_text')" click-touch="showOnScreenKeyboard('timeout_text')" type="number" min='1' max='9999' ng-model='zestStationData.idle_timer.max' class='admin-input admin-input' />
                 </div>
                 <div class="entry with-label">
-                    <label>{{'ADMIN_TIME_POP' |translate}}</label>
-                    <input touch-press id="prompt_text" ng-focus="showOnScreenKeyboard('prompt_text')" click-touch="showOnScreenKeyboard('prompt_text')" type="number" min='1' max='9999' ng-model='zestStationData.idle_timer.prompt' />
-                </div>
-                <div class="entry with-label">
-                    <label>{{'ADMIN_STATION_PRINTER' |translate}}</label>
+                    <label>Printer</label>
                     <!-- <input touch-press id="prompt_text" disabled="true" ng-model='zestStationData.printerLabel' click-touch='openPrinterMenu()'/> -->
                     <div class="entry select " ng-class="{'disabled':!isIpad}" touch-press='openPrinterMenu()'>
                         <select disabled="true" ng-model="zestStationData.printer_selected">
@@ -91,20 +94,21 @@
                     </div>
                 </div>
                 <div class="entry with-label" ng-show="showDebugModeOption">
-                    <label>{{'ADMIN_STATION_DEMOMODE' |translate}}</label>
+                    <label>Demo Mode</label>
+                    <label class='admin-label-description'>Allows Station to simulate a check-in card swipe and key encoding</label>
                     <div class="entry select">
                         <select ng-model="zestStationData.demoModeEnabled">
-                            <option value="true">{{'ADMIN_ENABLED' |translate}}</option>
-                            <option value="false">{{'ADMIN_DISABLED' |translate}}</option>
+                            <option value="true">Enabled</option>
+                            <option value="false">Disabled</option>
                         </select>
                     </div>
                 </div>
             </div>
         </div>
         <div id="actions" class="align-center">
-            <button type="button" class="button" touch-press='cancelAdminSettings()'>{{'ADMIN_CANCEL' |translate}}</button>
-            <button type="button" class="button button-left-margin" touch-press='saveSettings()'>{{'ADMIN_SAVE' |translate}}</button>
-            <button type="button" class="button button-left-margin" touch-press='logOutApplication()'>{{'LOGOUT' |translate}}</button>
+            <button type="button" class="button" touch-press='cancelAdminSettings()'>Cancel</button>
+            <button type="button" class="button button-left-margin" touch-press='saveSettings()'>Save</button>
+            <button type="button" class="button button-left-margin" touch-press='logOutApplication()'>Logout</button>
         </div>
     </div>
     <div>
