CICO-31110 updates to angularjs directive for more-generic use added ng-if and removed unnecessary no-tip class

--- a/admin/directives/toggle/adToggleButton.html
+++ b/admin/directives/toggle/adToggleButton.html
@@ -1,6 +1,6 @@
 <div class="entry {{divClass}}" ng-hide="isHide">
 	<label ng-class="{'help-space':description}" ng-hide="label.length ==0" for="">{{label}}</label>
-	<span ng-class="{'no-tip':!description}">
+	<span ng-if="description">
 		<div class="help-tip">
 			<p>{{description}}</p>
 		</div>
